--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,25 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.goastox</groupId>
+    <parent>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <groupId>org.springframework.boot</groupId>
+        <version>2.3.12.RELEASE</version>
+    </parent>
+
+    <groupId>com.goastox</groupId>
     <artifactId>commander</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+
+    <modules>
+        <module>core</module>
+        <module>client</module>
+        <module>common</module>
+        <module>server</module>
+    </modules>
+
+    <packaging>pom</packaging>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
