--- a/core/pom.xml
+++ b/core/pom.xml
@@ -51,6 +51,11 @@
             <version>3.9</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
