--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=commander
 application.version=v1.0.0.SNAPSHOT
 application.formatted-version=(v1.0.0.SNAPSHOT)
 
-spring.redis.database=1
-spring.redis.cluster.nodes=
+#spring.redis.database=1
+#spring.redis.cluster.nodes=
 #spring.redis.port=6379
 
-spring.redis.timeout=1000
+#spring.redis.timeout=1000
