--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.application.name=commander
-application.version=v1.0.0.SNAPSHOT
-application.formatted-version=(v1.0.0.SNAPSHOT)
+server.port = 8052
+server.servlet.context-path = /commander
+spring.application.name = commander
+application.version = v1.0.0.SNAPSHOT
+application.formatted-version = (v1.0.0.SNAPSHOT)
 
-#spring.redis.database=1
-#spring.redis.cluster.nodes=
-#spring.redis.port=6379
-
-#spring.redis.timeout=1000
+spring.redis.database = 1
+spring.redis.password = 123456
+spring.redis.cluster.nodes = localhost:6379
