--- a/core/pom.xml
+++ b/core/pom.xml
@@ -50,6 +50,10 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.9</version>
         </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>com.alibaba</groupId>
